--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" href="/vue3-vite2-ep-ts-nixujie/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vite App</title>
-<script type="module" crossorigin src="/assets/index.e6af01ee.js"></script>
-  <link rel="modulepreload" href="/assets/element-plus.93d71f21.js">
-  <link rel="stylesheet" href="/assets/index.8d58b2f7.css">
+<script type="module" crossorigin src="/vue3-vite2-ep-ts-nixujie/assets/index.e6af01ee.js"></script>
+  <link rel="modulepreload" href="/vue3-vite2-ep-ts-nixujie/assets/element-plus.93d71f21.js">
+  <link rel="stylesheet" href="/vue3-vite2-ep-ts-nixujie/assets/index.8d58b2f7.css">
 </head>
 <body>
   <div id="app"></div>
-  
+
 </body>
 </html>
